# CMake-avr-example

./: CMakeLists.txt  README.md  README.md~
basic_example/lib/example/: blink.h
basic_example/lib/wait/: wait.h
basic_example/src/: main.c
lib/example/: blink.c  blink.h
lib/wait/: wait.c
